--- a/app/views/categories/edit.html.haml
+++ b/app/views/categories/edit.html.haml
@@ -7,7 +7,7 @@
   = label :business, :title, 'Title'
   = text_field :business, 'title'
 
-  = label :business, :rating, 'Rating'
-  = select :business, :rating, ['1','2','3','4','5']
+  = label :business, :description, 'description'
+  = text_field :business, :description
 
   = submit_tag 'Update Category Info'
