--- a/app/views/categories/index.html.haml
+++ b/app/views/categories/index.html.haml
@@ -3,6 +3,8 @@
 
 %h1 All Categories
 
+%h3= link_to 'View Your profile', user_path(@current_user)
+
 %table#categories
   %thead
     %tr
@@ -14,4 +16,5 @@
         %td= link_to "#{category.title}", category_path(category) 
         %td= category.description
 
-= link_to 'Add new Category', new_category_path
+- if session[:username] == 'Maarij Tahir' then
+  = link_to 'Add new Category', new_category_path
