--- a/app/views/categories/new.html.haml
+++ b/app/views/categories/new.html.haml
@@ -5,4 +5,13 @@
   = label :category, :title, 'Title'
   = text_field :category, 'title'
 
+  %br
+  %br
+
+  = label :category, :title, 'Description'
+  = text_field :category, 'description', :id => 'bigbox'
+
+  %br
+  %br
+
   = submit_tag 'Save Changes'
