--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,8 +3,10 @@
 
 <head>
 </head>
-<body>
+<body style="margin:200px;">
 Welcome to Raaye, a portal dedicated to putting your views out there. Please Sign in to Continue.
+<br/>
+<br/>
 <div id="user_nav">
   <% if current_user %>
     Signed in as <strong><%= current_user.name %></strong>!
